--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^12.0.0",
+    "fontkit": "^2.0.4",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "pdf-lib": "^1.17.1",
